--- a/arabic_home.html
+++ b/arabic_home.html
@@ -1181,7 +1181,7 @@
                
             </div>
 
-            <div class="container">
+             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -1201,7 +1201,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1234,7 +1234,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1266,7 +1266,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1299,7 +1299,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1332,7 +1332,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1365,7 +1365,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1397,7 +1397,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1430,7 +1430,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1462,7 +1462,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1495,7 +1495,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1527,7 +1527,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1560,7 +1560,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1592,7 +1592,7 @@
                                 <p>ARABIC EXAMINATIONS</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE PRODUCTS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
