--- a/arabic_home.html
+++ b/arabic_home.html
@@ -326,7 +326,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ARABIC</h2>
-                               <h2>APPLICATIONS</h2>
+                              <h2>PROJECT</h2>
+                              <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -740,13 +741,14 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
+             </div>
 
             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1186,6 +1188,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1618,7 +1621,7 @@
                 </div>
 
                
-            </div>
+             </div>
 
          
 
@@ -1627,6 +1630,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2059,11 +2063,12 @@
                 </div>
             </div>
 
-               <div class="container">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
