--- a/english_home.html
+++ b/english_home.html
@@ -325,7 +325,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>ENGLISH</h2>
-                               <h2>APPLICATIONS</h2>
+                              <h2>PROJECT</h2>
+                              <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -746,6 +747,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1185,6 +1187,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1626,6 +1629,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EDUCATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2058,11 +2062,12 @@
                 </div>
             </div>
 
-               <div class="container">
+            <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>EXAMINATIONAL</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2508,7 +2513,7 @@
                         </div>
                     </div>
                 </div>
-               </div>
+             </div>
 
                <div class="container">
                 <div style="overflow-x:auto;">
