--- a/exams.html
+++ b/exams.html
@@ -325,7 +325,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                               <h2>EXAMINATIONS</h2>
+                              <h2>PROJECT</h2>
+                              <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
                 </div>
