--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -326,7 +326,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                              <h2>PROJECT</h2>
+                              <h2>ARABIC</h2>
                               <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
