--- a/services.html
+++ b/services.html
@@ -749,6 +749,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
                             <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1188,6 +1189,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ARABIC</h2>
                             <h2>APPLICATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -1627,6 +1629,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
                             <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -2066,6 +2069,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>ENGLISH</h2>
                             <h2>APPLICATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
