--- a/services.html
+++ b/services.html
@@ -342,7 +342,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -374,7 +374,7 @@
                                     <p>SERVICES SYSTEMS</p>
                                     <h3>PRISS</h3>
                                     <p style="text-align: justify;">
-                                        ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                        ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -407,7 +407,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -443,7 +443,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -475,7 +475,7 @@
                                     <p>SERVICES SYSTEMS</p>
                                     <h3>KGPRISS</h3>
                                     <p style="text-align: justify;">
-                                        ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                        ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -508,7 +508,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -544,7 +544,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -576,7 +576,7 @@
                                     <p>SERVICES SYSTEMS</p>
                                     <h3>KGPRIPRESS</h3>
                                     <p style="text-align: justify;">
-                                        ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                        ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -609,7 +609,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -645,7 +645,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -677,7 +677,7 @@
                                     <p>SERVICES SYSTEMS</p>
                                     <h3>AIS</h3>
                                     <p style="text-align: justify;">
-                                        ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                        ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                     </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
@@ -710,7 +710,7 @@
                                 <p>SERVICES SYSTEMS</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                     <div class="properties__footer d-flex justify-content-between align-items-center">
                                         <div class="restaurant-name">
