--- a/services.html
+++ b/services.html
@@ -741,7 +741,7 @@
                         </div>
                     </div>
                 </div> -->
-            </div>
+             </div>
 
             <div class="container">
                 <div class="row justify-content-center">
@@ -761,10 +761,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>KGSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -794,10 +794,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>PRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -826,10 +826,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>PRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -859,10 +859,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>SECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -892,10 +892,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>KGPRISS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -925,10 +925,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>PRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -957,10 +957,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>PRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -990,10 +990,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>KGPRIPRESS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1022,10 +1022,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>PRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1055,10 +1055,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>SCHOOLS SYSTEMS</p>
+                                <p>SCHOOLS SERVICES</p>
                                 <h3>KGPRIPRESECSS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1087,10 +1087,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>INSTITUTES SYSTEMS</p>
+                                <p>INSTITUTES SERVICES</p>
                                 <h3>AIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1120,10 +1120,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>UNIVERSITIES SYSTEMS</p>
+                                <p>UNIVERSITIES SERVICES</p>
                                 <h3>AUS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
@@ -1152,10 +1152,10 @@
                                 <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                             </div>
                             <div class="properties__caption">
-                                <p>MINISTRY SYSTEMS</p>
+                                <p>MINISTRY SERVICES</p>
                                 <h3>EMIS</h3>
                                 <p style="text-align: justify;">
-                                    ONLINE SYSTEMS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
+                                    ONLINE SERVICES ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
                                 </p>
                                 <div class="properties__footer d-flex justify-content-between align-items-center">
                                     <div class="restaurant-name">
