--- a/arabic_services.html
+++ b/arabic_services.html
@@ -748,6 +748,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1187,6 +1188,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1627,6 +1629,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2066,6 +2069,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
