--- a/english_services.html
+++ b/english_services.html
@@ -749,6 +749,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1188,6 +1189,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1628,6 +1630,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2067,6 +2070,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
