--- a/arabic_services.html
+++ b/arabic_services.html
@@ -743,7 +743,7 @@
              </div>
 
    
-                  <div class="container">
+             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -1183,7 +1183,7 @@
                
              </div>
 
-              <div class="container">
+             <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
@@ -1629,8 +1629,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MONTHLY</h2>
-                            <h2>APPLICATIONS</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -2069,8 +2069,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>YEARLY</h2>
-                            <h2>APPLICATIONS</h2>
-                            <h2>PRODUCTS</h2>
+                            <h2>EXAMINATIONS</h2>
+                            <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
