--- a/index.html
+++ b/index.html
@@ -328,7 +328,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                              <h2>PROJECT</h2>
+                              <h2>PLATFORM</h2>
                               <h2>APPLICATIONS</h2>
                         </div>
                     </div>
@@ -750,7 +750,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                               <h2>PROJECT</h2>
+                               <h2>PLATFORM</h2>
                                <h2>VISION</h2>
                         </div>
                     </div>
@@ -970,7 +970,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>MAANDEEQ</h2>
-                             <h2>PROJECT</h2>
+                             <h2>PLATFORM</h2>
                             <h2>MISSION</h2>
                         </div>
                     </div>
@@ -1837,7 +1837,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                               <h2>PROJECT</h2>
+                               <h2>PLATFORM</h2>
                                <h2>CORE VALUES</h2>
                         </div>
                     </div>
