--- a/services.html
+++ b/services.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
     <meta http-equiv="x-ua-compatible" content="ie=edge">
-    <title>SERVICES SYSTEMS</title>
+    <title>MAANDEEQ SERVICES</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="manifest" href="site.webmanifest">
@@ -326,7 +326,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                               <h2>MAANDEEQ</h2>
-                              <h2>PROJECT</h2>
+                              <h2>PLATFORM</h2>
                               <h2>SERVICES</h2>
                         </div>
                     </div>
